# pynova_os

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  benchmark.py  cli.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_PyNova_Requirements_Elicitation (2).md  02_PyNova_Software_Lifecycle (1).md  03_PyNova_Software_Engineering_Aspects (1).md  04_PyNova_Architecture_Design_Document (1).md  Design_Document.md
docs/Flowcharts/: README.md
docs/UML_Diagrams/: README.md
examples/: README.md  batch_simulation.json
src/filesystem/: __init__.py  vfs.py
src/gui/: __init__.py  app.py
src/iodev/: __init__.py  device_manager.py
src/kernel/: __init__.py  engine.py  pcb.py  process_manager.py  scheduler.py
src/memory/: __init__.py  memory_manager.py
src/utils/: __init__.py  config_loader.py  exporter.py
tests/: test_config_loader.py  test_engine.py  test_exporter.py  test_io.py  test_memory.py  test_scheduler.py  test_vfs.py
